--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: rust
 before_script:
-- rustup component add rustfmt-preview
+- rustup component add clippy-preview rustfmt-preview
 script:
 - cargo fmt --all -- --check
-- cargo build
+- cargo clippy --all-targets --all-features -- -D warnings
 - cargo test
 rust:
   - stable
