Trying new travis syntax

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ rust:
   - nightly
 matrix:
   allow_failures:
-    - rust: beta
-    - rust: nigthly
+    rust:
+    - beta
+    - nigthly
   fast_finish: true
