--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ rust:
   - nightly
 matrix:
   allow_failures:
-    rust:
-    - beta
-    - nigthly
+    - rust: beta
+    - rust: nightly
   fast_finish: true
