Use lto = true for profile.release

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ tar = "*"
 walkdir = "*"
 zip = { version = "*", features = ["deflate-zlib"], default-features = false }
 
+[profile.release]
+lto = true
